# azoth

./: .gitignore  CHALLENGE2_PROMPT.md  CHALLENGE_PROMPT.md  Cargo.toml  GUI_PLAN.md  LICENSE  README.md  TECHNICAL_DETAILS.md  kpdc_reference.py
.github/workflows/: ci.yml  release.yml
_bmad-output/brainstorming/: 8pdc-spec-draft.md  brainstorming-session-2026-06-06.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
azoth/: Cargo.toml
azoth/examples/: make_snapshots.rs
azoth/fuzz/: Cargo.toml
azoth/fuzz/fuzz_targets/: read_arbitrary.rs
azoth/src/: lib.rs  main.rs
azoth/tests/: security.rs
cli/: Cargo.toml
cli/src/: main.rs
cmd/: Cargo.toml
cmd/src/: main.rs
core/: Cargo.toml  rust-toolchain.toml
core/examples/: make_controls.rs
core/fuzz/fuzz_targets/: read_arbitrary.rs
core/src/: app.rs  lib.rs
core/tests/: acceptance.rs  security.rs
gui/: Cargo.toml
gui/src/: core.rs  main.rs
gui/tests/: acceptance.rs
secrev/: README.md
secrev/raw_output/: battery.txt  capstone_fast.txt  code_review_10lens.json  investigate_mod8.txt  k_analysis.txt  multisnapshot.txt
secrev/scripts/: battery.py  capstone_fast.py  investigate_mod8.py  k_analysis.py  make_controls.rs  make_snapshots.rs  multisnapshot.py
win/: Cargo.toml
win/src/: main.rs
