[package]
name = "azoth"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Deniable encryption container (K-Plane Deniable Container / KPDC)"
license = "MIT"
repository = "https://github.com/DataAlchemy/azoth"

[lib]
name = "azoth"
path = "src/lib.rs"

[[bin]]
name = "azoth"
path = "src/main.rs"

[dependencies]
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
subtle = "2"
zeroize = "1"
getrandom = "0.2"
rpassword = "7"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# SHAKE256 as a cryptographic deterministic fill for the statistical test suite
# (so higher-order randomness tests are reproducible and never flake).
sha3 = "0.10"

[profile.release]
opt-level = 3
lto = true
