[package]
name = "azoth-cmd"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "azoth deniable container — Windows command-line interface"
license = "MIT"

[[bin]]
name = "azoth"
path = "src/main.rs"

[dependencies]
azoth = { path = "../core" }   # shared core — no new crypto here
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7"
zeroize = "1"
hex = "0.4"
