[package]
name = "azoth"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Deniable encryption container (K-Plane Deniable Container / KPDC) — shared core"
license = "MIT"
repository = "https://github.com/DataAlchemy/azoth"

[lib]
name = "azoth"
path = "src/lib.rs"

[dependencies]
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
subtle = "2"
zeroize = "1"
getrandom = "0.2"

[dev-dependencies]
# SHAKE256 as a cryptographic deterministic fill for the statistical test suite
# (so higher-order randomness tests are reproducible and never flake).
sha3 = "0.10"

# NOTE: release profile lives at the workspace root (member profiles are ignored in a workspace).
