[package]
name = "azoth"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Deniable encryption container (K-Plane Deniable Container / KPDC) — shared core"
license = "MIT"
repository = "https://github.com/DataAlchemy/azoth"

[lib]
name = "azoth"
path = "src/lib.rs"

[dependencies]
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
subtle = "2"
zeroize = "1"
getrandom = "0.2"
# Payload ciphers (selectable; default AES-256-CTR). RustCrypto 0.4-`cipher`-generation crates.
# `aes`+`ctr` give AES-256-CTR; `chacha20` gives IETF ChaCha20. `zeroize` wipes the AES round keys,
# the ChaCha20 state, and the CTR counter block on drop (the latter needs `ctr`'s own feature).
aes = { version = "0.8", features = ["zeroize"] }
ctr = { version = "0.9", features = ["zeroize"] }
chacha20 = { version = "0.9", features = ["zeroize"] }

[dev-dependencies]
# SHAKE256 as a cryptographic deterministic fill for the statistical test suite
# (so higher-order randomness tests are reproducible and never flake).
sha3 = "0.10"

# NOTE: release profile lives at the workspace root (member profiles are ignored in a workspace).
