[package]
name = "azoth-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Native Windows GUI front-end for the azoth deniable container (KPDC)"
license = "MIT"

[[bin]]
name = "azoth-gui"
path = "src/main.rs"

[dependencies]
azoth = { path = "../core" }   # shared core (crypto + app orchestration) — NO new crypto here
# glow (OpenGL) backend only: a small native GUI doesn't need wgpu/DirectX, and the wgpu
# stack (naga, hassle-rs/DXC, ash) is heavy and fragile to build under the windows-gnu toolchain.
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.14"                     # native file open/save dialogs
zeroize = "1"                    # hold library-returned secrets in Zeroizing
